@@ -77,6 +77,7 @@ from encryption import (generate_symmetric_key,
                         encrypt_symmetric,
                         decrypt_symmetric,
                         get_public_key,
+                        get_public_key_user_ids,
                         Keyring,
                         SecretKeyring,
                         encrypt_with_keyring,
